Preserve fold order in criterion value map